# repo-summarizer

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
src/repo_summarizer/: __init__.py  api.py  config.py  context.py  core.py  github.py  llm.py  models.py  prompts.py
tests/: conftest.py  test_context.py  test_github.py  test_integration.py
