[project]
name = "repo-summarizer"
version = "0.1.0"
description = "GitHub Repository Summarizer API — generates LLM-powered summaries of GitHub repos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "openai>=1.82",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
